final jeopardy ability

--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body{
     border: 0.5vh solid yellow;
 
 }
-
 .container{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -69,6 +68,28 @@ body{
     margin-top: 5vh;
     font-size: 5vh;
 }
+
+#final:hover{
+    cursor: pointer;
+}
+
+#finalJep{
+    font-size: 10vh;
+    color: cyan;
+    text-align: center;
+}
+
+#overlay {
+    position: fixed; /* Sit on top of the page content */
+    display: none; /* Hidden by default */
+    top: 30vh;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: rgba(0,0,0,0.7); /* Black background with opacity */
+    color: white;
+    z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
+    text-align: center;
+  }
 
 @media screen and (max-width:1000px){
 
