--- a/style.css
+++ b/style.css
@@ -114,8 +114,9 @@ body{
         top: 10vh;
     }
 
-    .container{
+    .container div{
         padding: 0vw;
+        font-size: 1.5vh;
     }
 
   
