--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@ body{
     margin-top: 2vh;
 }
 
+a{
+    color: yellow;
+}
+
 button{
     background-color: yellow;
     color: blue;
@@ -125,7 +129,7 @@ button{
         margin-left: 0.5vw;
     }
 
-    #points div{
+    #points h3{
         font-size: 2vh;
     }
 
